MagicEventsWebApp/Backend/k8s/ingress/magicevents-front-ingress.yaml
# k8s/ingress/magicevents-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magicevents-ingress
  namespace: magicevents
spec:
  ingressClassName: nginx
  rules:
    - host: magicevents.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: 
                  number: 3000
