MagicEventsWebApp/Backend/k8s/ingress/magiceventsapp-api-ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magicevents-ingress-api-private
  namespace: magicevents
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "$http_origin"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://magicevents.com/api/users/auth/verify"
    nginx.ingress.kubernetes.io/auth-method: "GET"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-Email,X-User-Role,X-User-ID"
    nginx.ingress.kubernetes.io/auth-cache-key: "$http_authorization"
    nginx.ingress.kubernetes.io/auth-cache-duration: "300s"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - magicevents.com
      secretName: magicevents-tls
  rules:
    - host: magicevents.com
      http:
        paths:
          - path: /api/events(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: events-management-service
                port:
                  number: 8080
          - path: /api/eventsetup(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: eventsetup-service
                port:
                  number: 8086
          - path: /api/boards(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: board-service
                port:
                  number: 8081
          - path: /api/games(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: guest-game-service
                port:
                  number: 8083
          - path: /api/galleries(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gallery-service
                port:
                  number: 8085
