MagicEventsWebApp/Backend/k8s/ingress/magiceventsapp-api-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magicevents-ingress-api-public
  namespace: magicevents
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /login/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "$http_origin"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - magicevents.com
      secretName: magicevents-tls
  rules:
    - host: magicevents.com
      http:
        paths:
          - path: /api/users/login(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-management-service
                port:
                  number: 8443
